<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.alipay.sofa.acts</groupId>
    <artifactId>acts-parent</artifactId>
    <version>1.0.0</version>
    <name>Alipay Acts parent</name>
    <url>http://www.antfin.com</url>
    <description>Alipay Acts Application Parent</description>
    <packaging>pom</packaging>

    <modules>
        <module>acts-bom</module>
        <module>acts-core</module>
        <module>acts-common-dto</module>
        <module>acts-common-util</module>
    </modules>

    <organization>
        <name>The Ant Financial</name>
        <url>http://www.antfin.com/</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <acts.bom>1.0.0</acts.bom>
        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.jacoco.itReportPath>target/jacoco-it.exec</sonar.jacoco.itReportPath> 
        <sonar.jacoco.reportPath>target/jacoco-ut.exec</sonar.jacoco.reportPath> 
        <jacoco.path>${project.build.directory}/jacoco-ut.exec</jacoco.path>
        <jacoco.skip>false</jacoco.skip>
        <license.maven.plugin>3.0</license.maven.plugin>
        <project.encoding>UTF-8</project.encoding>
        <maven.java.formatter.plugin>0.4</maven.java.formatter.plugin>
        <spring.version>4.3.18.RELEASE</spring.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.alipay.sofa.acts</groupId>
                <artifactId>acts-bom</artifactId>
                <version>${acts.bom}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity</artifactId>
                <version>1.7</version>
            </dependency>

            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>6.4</version>
            </dependency>

            <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-core</artifactId>
                <version>8.5.34</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-aop</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>3.2.0</version>
            </dependency>
            <dependency>
                <groupId>au.com.bytecode</groupId>
                <artifactId>opencsv</artifactId>
                <version>2.4</version>
            </dependency>
            <dependency>
                <groupId>com.jcraft</groupId>
                <artifactId>jsch</artifactId>
                <version>0.1.41</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>jsch</groupId>
                <artifactId>jsch</artifactId>
                <version>0.1.7</version>
            </dependency>
            <dependency>
                <groupId>ch.ethz.ganymed</groupId>
                <artifactId>ganymed-ssh2</artifactId>
                <version>build210</version>
            </dependency>
            <dependency>
                <groupId>commons-dbcp</groupId>
                <artifactId>commons-dbcp</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>

            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.1.1</version>
            </dependency>

            <dependency>
                <groupId>uk.com.robust-it</groupId>
                <artifactId>cloning</artifactId>
                <version>1.9.2</version>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>2.1</version>
            </dependency>
            <dependency>
                <groupId>ognl</groupId>
                <artifactId>ognl</artifactId>
                <version>3.1.15</version>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>0.9.9-RC1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>19.0</version>
            </dependency>

            <dependency>
                <groupId>org.azeckoski</groupId>
                <artifactId>reflectutils</artifactId>
                <version>0.9.20</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>3.16.1-GA</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.2.31</version>
            </dependency>

            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>2.6</version>
            </dependency>

            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>5.1.16</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <build>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>${user.dir}</directory>
                <includes>
                    <include>LICENSE</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license.maven.plugin}</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>remove</goal>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <quiet>true</quiet>
                    <header>${user.dir}/HEADER</header>
                    <includes>
                        <include>**/src/main/java/com/alipay/test/**</include>
                        <include>**/src/test/java/com/alipay/test/**</include>
                        <include>**/src/test/java/com/demo/poc/accountcenter/**</include>
                        <include>**/src/main/java/com/demo/poc/accountcenter/**</include>
                    </includes>
                    <excludes>
                        <exclude>**/src/main/java/com/alipay/yaml/**</exclude>
                    </excludes>
                    <strictCheck>true</strictCheck>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
                <artifactId>maven-java-formatter-plugin</artifactId>
                <version>${maven.java.formatter.plugin}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>${user.dir}/Formatter.xml</configFile>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
                <configuration>
                    <skip>${jacoco.skip}</skip>
                    <destFile>${jacoco.path}</destFile>
                    <dataFile>${jacoco.path}</dataFile>
                    <sessionId>jacoco_coverage</sessionId>
                    <excludes>
                        <!--dto-->
                        <exclude>**/com/alipay/test/acts/model/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/constants/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/setter/*.class</exclude>
                        <!--util-->
                        <exclude>**/com/alipay/yaml/**/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/api/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/cache/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/constant/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/context/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/db/enums/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/driver/ActsConfiguration.class</exclude>
                        <exclude>**/com/alipay/test/acts/driver/enums/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/exception/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/log/ActsLogUtil.class</exclude>
                        <exclude>**/com/alipay/test/acts/object/enums/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/object/generator/CustomGenerator.class</exclude>
                        <exclude>**/com/alipay/test/acts/object/result/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/util/BaseDataUtil*.class</exclude>
                        <exclude>**/com/alipay/test/acts/util/*TableModelUtil.class</exclude>
                        <exclude>**/com/alipay/test/acts/util/LogApis.class</exclude>
                        <exclude>**/com/alipay/test/acts/util/LogUtil.class</exclude>
                        <exclude>**/com/alipay/test/acts/yaml/**/*.class</exclude>
                        <!--core-->
                        <exclude>**/com/alipay/test/acts/annotation/**/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/collector/CaseResultCollector.class</exclude>
                        <exclude>**/com/alipay/test/acts/collector/sqllog/SqlTypeEnum.class</exclude>
                        <exclude>**/com/alipay/test/acts/component/db/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/component/event/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/component/handler/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/config/DataAccessConfig.class</exclude>
                        <exclude>**/com/alipay/test/acts/exception/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/template/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/utils/config/**/*.class</exclude>
                        <exclude>**/com/alipay/test/acts/utils/DetailCollectUtils.class</exclude>
                    </excludes>
                    <rules>
                        <rule implementation="org.jacoco.maven.RuleConfiguration">
                            <element>BUNDLE</element>
                            <limits>　　
                                <limit implementation="org.jacoco.report.check.Limit">
                                    <counter>METHOD</counter>
                                    <value>COVEREDRATIO</value>
                                    <minimum>0.50</minimum>
                                </limit>
                                <limit implementation="org.jacoco.report.check.Limit">
                                    <counter>BRANCH</counter>
                                    <value>COVEREDRATIO</value>
                                    <minimum>0.40</minimum>
                                </limit>
                                <limit implementation="org.jacoco.report.check.Limit">
                                    <counter>CLASS</counter>
                                    <value>MISSEDCOUNT</value>
                                    <maximum>0</maximum>
                                </limit>
                            </limits>
                        </rule>
                    </rules>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
                    <includes>
                        <include>**/*Test*.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.0.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.5</version>
                <configuration>
                    <xmlOutput>true</xmlOutput>
                    <threshold>High</threshold>
                    <effort>Default</effort>
                    <relaxed>true</relaxed>
                    <findbugsXmlOutput>true</findbugsXmlOutput>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <profiles>
        <profile>
        <id>default</id>
        <activation>
            <activeByDefault>true</activeByDefault>
        </activation>
        <repositories>
            <repository>
                <snapshots>
                    <enabled>true</enabled>
                </snapshots>
                <id>maven-snapshot</id>
                <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            </repository>
        </repositories>
        <pluginRepositories>
            <pluginRepository>
                <snapshots>
                    <enabled>true</enabled>
                </snapshots>
                <id>maven-snapshot</id>
                <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            </pluginRepository>
        </pluginRepositories>
        </profile>
    </profiles>

</project>
